force-app/main/default/objects/Contract_Milestone__c/Contract_Milestone__c.object-meta.xml
<CustomObject>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Contract Milestone</label>
    <nameField>
        <label>Contract Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>