force-app/main/default/objects/Contract_Milestone__c/fields/Agency_Contract__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contract__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Agency Contract</label>
    <referenceTo>Agency_Contract__c</referenceTo>
    <relationshipLabel>Contract Milestones</relationshipLabel>
    <relationshipName>Contract_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>