force-app/main/default/objects/Contract_Milestone__c/fields/Milestone_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Achievement__c</fullName>
    <inlineHelpText>Definition of milestone achievement.</inlineHelpText>
    <label>Milestone Achievement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Hours Worked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>