force-app/main/default/objects/Contract_Milestone__c/fields/Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Period_Days__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Period (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>