force-app/main/default/objects/Contract_Milestone__c/fields/Units_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Units_Achieved__c</fullName>
    <inlineHelpText>Number of units achieved as described by Milestone Achievement.</inlineHelpText>
    <label>Units Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>